--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,9 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:layout_margin="20dp">
 
-    <VideoView
+    <com.longdo.mjpegviewer.MjpegView
         android:id="@+id/video_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
